[#32 status:Ready for Retest] Added clear contextmenu on console textarea

--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -158,7 +158,14 @@
                         </HBox>
                       <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="console" VBox.vgrow="ALWAYS">
                            <children>
-                              <TextArea fx:id="txtConsole" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <TextArea fx:id="txtConsole" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <contextMenu>
+                                    <ContextMenu>
+                                      <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#clearConsole" text="Clear" />
+                                      </items>
+                                    </ContextMenu>
+                                 </contextMenu></TextArea>
                            </children>
                         </AnchorPane>
                      </children>
