[#18 status: Ready for Retest] Fixed recent profile bugs
Added new context menu from profile browser

--- a/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
+++ b/resignator/src/main/resources/fxml/ResignatorAppMainView.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.input.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8"
-      fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bekwam.resignator.ResignatorAppMainViewController">
    <children>
       <MenuBar VBox.vgrow="NEVER">
         <menus>
@@ -67,6 +68,7 @@
                            <contextMenu>
                               <ContextMenu>
                                 <items>
+                                    <MenuItem mnemonicParsing="false" onAction="#newProfile" text="New" />
                                     <MenuItem mnemonicParsing="false" onAction="#rename" text="Rename" />
                                   <MenuItem mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
                                 </items>
@@ -92,8 +94,8 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                         <Label text="Type:" GridPane.halignment="RIGHT"/>
-                         <ChoiceBox fx:id="cbType" prefWidth="150.0" GridPane.columnIndex="1"/>
+                         <Label text="Type:" GridPane.halignment="RIGHT" />
+                         <ChoiceBox fx:id="cbType" prefWidth="150.0" GridPane.columnIndex="1" />
                         <Label fx:id="lblSource" text="Source JAR:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                         <TextField fx:id="tfSourceFile" onKeyPressed="#clearValidationErrors" onMouseClicked="#clearValidationErrors" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <tooltip>
@@ -121,24 +123,22 @@
                              <children>
                                  <Button mnemonicParsing="false" onAction="#openJarsignerConfig" text="Configure">
                                      <HBox.margin>
-                                         <Insets right="10.0"/>
+                                         <Insets right="10.0" />
                                      </HBox.margin>
                                  </Button>
-                                 <CheckBox fx:id="ckReplace" mnemonicParsing="false"
-                                           text="Replace existing signatures?">
+                                 <CheckBox fx:id="ckReplace" mnemonicParsing="false" text="Replace existing signatures?">
                                      <HBox.margin>
-                                         <Insets right="10.0"/>
+                                         <Insets right="10.0" />
                                      </HBox.margin>
                                  </CheckBox>
-                                 <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1"
-                                         GridPane.rowIndex="2">
+                                 <Button mnemonicParsing="false" onAction="#sign" text="Sign" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                      <HBox.margin>
-                                         <Insets right="10.0"/>
+                                         <Insets right="10.0" />
                                      </HBox.margin>
                                  </Button>
                                  <ProgressIndicator fx:id="piSignProgress" progress="0.0" visible="false">
                                      <HBox.margin>
-                                         <Insets left="10.0"/>
+                                         <Insets left="10.0" />
                                      </HBox.margin>
                                  </ProgressIndicator>
                              </children>
@@ -160,9 +160,7 @@
                         </HBox>
                       <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="console" VBox.vgrow="ALWAYS">
                            <children>
-                               <TextArea fx:id="txtConsole" editable="false" AnchorPane.bottomAnchor="0.0"
-                                         AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                         AnchorPane.topAnchor="0.0">
+                               <TextArea fx:id="txtConsole" editable="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <contextMenu>
                                     <ContextMenu>
                                       <items>
